fix bug: generateSubjectCode when create subject, delete subject by subjectCode with params
